GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.16alpah16 :
    
        - Added utolower configuration option to convert all usernames
          to lowercase during printing. 
          
    - 1.15alpha15 :
    
        - Now includes the papwaitprinter.sh shell script to wait for
          AppleTalk enabled printers.
          
    - 1.16alpha14 :
    
        - Now printing on a printer not defined in the Quota Storage,
          results in the job being cancelled or stopped, depending
          on the printing system.
          
    - 1.16alpha13 :
    
        - Small bugfix wrt Python v2.1
        
        - If username is an empty string, user root is assumed.
        
        - 'postgresql' is not recognized anymore as a storage backend,
          you have to use 'pgstorage' instead. 'postgresql' used to
          be supported for compatibility with very old PyKota versions,
          this is not the case anymore.
          
    - 1.16alpha12 :
    
        - Job price added to job history, to keep accounting correct
          if a printer price per page or per job is modified and the
          history is not reset : the history would have given a false
          amount of money charged before the printer's prices were
          modified, this addition solves the problem.
          
    - 1.16alpha11 :
    
        - Some preliminary modifications to the database structure for 
          PostgreSQL and OpenLDAP. A script to upgrade a PostgreSQL
          database is now provided. LDAP attributes now support
          eq, pres and sub indexes. 
          
        - Job history now contains additional informations :  
          number of copies, filename, title and print options.